2003-05-17  Dennis Cranston <dennis_cranston at yahoo com>

	* prop.c, prop-add.c, prop-map.c:  HIGify the action area of the 
	various dialogs.

2003-05-13  Kevin Vandersloot <kfv101@psu.edu>

	* gkb.c: remove handlers on exit. Patch by Muktha Narayan. Fixes
	bug #112076

2003-05-12  Kevin Vandersloot <kfv101@psu.edu>

	* descs/Syriac.keyprop.in,Syriac_Phonetic.keyprop.in: Add Syriac keymap.
	Patch from Emil Soleyman-Zomalan. Fixes bug #108154

2003-05-06  Sanlig Badral  <badral@users.sf.net>

	* descs/MN_Mongolian.keyprop.in, descs.sun/MN_Mongolian.keyprop.in,
	* xmodmap/xmodmap.mn, xmodmap.sun/xmodmap.mn : Added mongolian
	* keyboard.
	
2003-04-30  Kevin Vandersloot <kfv101@psu.edu>

	* prop.c: Make dialog per instance so that two instances don't share. Fixes
	bug #111933
	
	* prop-map.c: fix warning

2003-04-27  Dennis Cranston <dennis_cranston at yahoo com>

	* prop.c, prop-map.c:  Fix widget padding per HIG.
	
2003-04-24  Dennis Cranston <dennis_cranston at yahoo com>

	* gkb.h, prop.c, prop-list.c:  Add a mnemonic label for the list view.
	* prop-add.c:  Add a mnemonic label for the tree view.
	* prop-map.c:  Replace OK button with a CLOSE button.
	
2003-04-23  Dennis Cranston <dennis_cranston at yahoo com>

	* prop-add.c: HIGify the Add dialog.
	* prop.c, prop-list.c: HIGify the Preferences dialog.
	* prop-map.c: HIGify the Properties dialog. 
	* preset.c: Prevent a potential crash. 
	* help/C/gkb.xml:  Update documentation.

2003-04-23  Rajkumar Siavasamy  <rajkumar.siva@wipro.com>

	* prop-add.c: Check if the keymap the user trying to add is already present
	in the list. If it's there pop a info. message dialog and don't add the keymap
	again to the list.
	Fixes Bug 111023

2003-04-20  Szabolcs Ban  <shooby@gnome.hu>

	* gkb.c, gkb.h: moved GKB_PANEL_SIZE_SMALL define
	* prop.c: if panel size is small don't show size preference
	Fixes (#76223) 

2003-04-15  Kevin Vandersloot <kfv101@psu.edu>
