@@ -8,6 +8,6 @@ Command=xmodmap $HOME/.gkb_default.xmm
 
 [Country 0]
 Flag=gkb.png
-Label=gkb
+Label=Default
 _Language=International
 _Country=International
